--- a/uforia/CMakeLists.txt
+++ b/uforia/CMakeLists.txt
@@ -9,10 +9,10 @@ add_library(has has.h)
 add_library(messages messages.h)
 add_library(random random.h)
 add_library(strings strings.h)
-add_library(helpmaker helpmaker.h)
+add_library(helpmenu helpmenu.h)
 add_library(uforia uforia.h)
 
-foreach(target IN ITEMS colored from has messages random strings helpmaker uforia)
+foreach(target IN ITEMS colored from has messages random strings helpmenu uforia)
 	set_target_properties(${target} PROPERTIES LINKER_LANGUAGE CXX)
 endforeach()
 
