--- a/uforia/CMakeLists.txt
+++ b/uforia/CMakeLists.txt
@@ -10,9 +10,12 @@ add_library(messages messages.h)
 add_library(random random.h)
 add_library(strings strings.h)
 add_library(helpmenu helpmenu.h)
+add_library(debug debug.h)
+add_library(unique unique.h)
+add_library(count count.h)
 add_library(uforia uforia.h)
 
-foreach(target IN ITEMS colored from has messages random strings helpmenu uforia)
+foreach(target IN ITEMS colored from has messages random strings helpmenu debug unique count uforia)
 	set_target_properties(${target} PROPERTIES LINKER_LANGUAGE CXX)
 endforeach()
 
